# SpendSavvy

./: CMakeLists.txt  README.md  SpendSavvy.cpp  SpendSavvy.filters  SpendSavvy.vcxproj  date.h
database/: database.db
include/: account.h  database.h
src/: account.cpp  account.h  database.cpp  date.cpp  transaction.cpp  transaction.h
